@@ -3,6 +3,7 @@
 0.5.0.dev0
     * Implementation of print after upload endpoint
     * Minimal suported firmware is 3.10.0
+    * Sort files directory first, newest first
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
